--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --env-file=.env server.js",
-    "start": "node server.js"
-  },
+  "dev": "nodemon --env-file=.env server.js",
+  "start": "node server.js",
+  "build": "echo 'No build step required'"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
